--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.5.1",
     "sass": "^1.69.4",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
